# termux-gui-pm

./: .gitignore  CMakeLists.txt  README.md
src/: __main__.py  activity.py  apt.py  install_layout.py  install_progress_layout.py  mainlayout.py  pacman.py  pm.py  pms.py  proot_distro.py  uninstall_layout.py  uninstall_progress_layout.py  update_layout.py  upgrade_layout.py
